samples/_failures_safe/1761621361_ffde40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02682a0d.c: In function ‘main’:
./samples/SAFE/__tmp_02682a0d.c:156:1: error: expected declaration or statement at end of input
  156 | int main() {
      | ^~~
